# svp-harvester

./: .dockerignore  .env.example  .gitignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .test.env  Dockerfile  README.md  Readme.md  babel.cfg  docker-compose.yml  docker-compose.yml.dist  harvesters.yml  identifiers.yml  jobs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd_push_dev_main.yaml  cd_release.yaml  ci.yaml  ci_pull_request.yaml
alembic/: env.py
alembic/versions/: 0565e80223a7_add_harvester_version_to_reference.py  05cec8971375_add_book.py  0f7d69c4bad7_allow_null_values_has_contributor_.py  129560a4d400_add_harvester_version_to_reference.py  13949ed5b55c_add_states_enum_to_harvesters.py  1fc53c666a86_add_entities_people_identifiers_to_the_.py  20409156f887_add_references_and_reference_events.py  211d693e0fe3_add_hal_submit_type_field_to_reference.py  2248a9928bed_add_models_to_database.py  26bb2c22515d_remove_history_safe_feature.py  2af6cb761f0d_add_unique_index_to_identifiers.py  2cdd75e33246_change_unique_constraints_on_isbn10_.py  31912c99fa2a_add_event_types_filter_to_retrieval_.py  352109cd8dd5_add_unique_constraint_to_contributor_.py  374cdea04cbf_.py  3867058e77a9_add_identifier_used_to_harvesting.py  3cccb8eec883_add_first_model.py  472729c5be0e_add_history_field_to_harvestings.py  4c96f2c87560_merge_migration_after_litterals_.py  4ed9b20de12f_add_unique_index_to_issues.py  54916be95355_.py  55c3c9f3ee4a_add_hal_collection_code_field_to_.py  56efe00e9d63_rebuild_alembic_revisions.py  5aadf4c08b01_add_value_to_identifiers_and_make_.py  5b345b1cf9fd_add_unique_constraint_to_contributors.py  5dd94d035a91_add_enhanced_bool_to_reference_event.py  5ed3be5dca82_add_book_source.py  5f00ad57e5ed_add_issn_trigger.py  60268e6db772_.py  64e06961ec1e_update_indexed_fields.py  6ab5ffcbc28e_add_name_variant_book.py  6b0c405a36a9_merge_heads.py  6d0387871d88_add_timestamp_to_retrieval.py  7161ca0b88de_add_manifestations_model.py  73c091d120c1_rebuild_alembic_revisions.py  7e00006b7258_add_issn_l_change_cardinalities_issn_.py  7e5a6084ab57_reference_date.py  808af9258e7f_add_additional_files_to_manifestations.py  82dd85d0b650_add_history_field_to_reference_events.py  85905fe6c284_title_book_can_be_null.py  (+33 more)
app/: amqp_listen.py  config.py  configure_logger.py  http_client.py  main.py  svp_harvester.py
app/amqp/: abstract_amqp_message_factory.py  amqp_harvesting_message_factory.py  amqp_interface.py  amqp_message_processor.py  amqp_message_publisher.py  amqp_reference_event_message_factory.py  amqp_retrieval_message_factory.py
app/auth/: basic.py
app/db/: abstract_dao.py  conversions.py  daos.py  models.py  session.py
app/harvesters/: abstract_document_type_converter.py  abstract_harvester.py  abstract_harvester_factory.py  abstract_harvester_raw_result.py  abstract_references_converter.py  abstract_roles_converter.py  etree_harvester_raw_result.py  json_harvester_raw_result.py  rdf_harvester_raw_result.py  sparql_harvester_raw_result.py  xml_harvester_raw_result.py
app/http/: aio_http_client_manager.py
app/i18n/: get_request_locale.py  i18n_middleware.py
app/logging/: logging_middleware.py
app/models/: abstracts.py  book.py  concepts.py  contribution.py  contributor.py  custom_medatata.py  document_type.py  entities.py  harvesting.py  harvesting_error.py  identifiers.py  issue.py  journal.py  labels.py  literal_fields.py  organization.py  organization_identifier.py  people.py  publication_identifier.py  reference_events.py  reference_identifier.py  reference_manifestation.py  reference_summary.py  references.py  retrieval.py  retrieval_summary.py  subtitles.py  titles.py
app/redis/: fake_redis_pool.py  redis_pool.py
app/settings/: app_env_types.py  app_settings.py  development_settings.py  production_settings.py  test_settings.py
app/templates/: base.html.jinja  collection_history.html.jinja  history.html.jinja  index.html  index.html.jinja  overview.html.jinja  package-lock.json  package.json  publication_history.html.jinja  retrieve.html.jinja  webpack.config.js
app/utilities/: date_utilities.py  execution_timer_wrapper.py  isbn_utilities.py  string_utilities.py  url_utilities.py
deploy/k8s/: .gitignore  svp-rabbit-pvc.yaml  svp-rabbit-secret.yaml.dist  svph-api-depl.yaml  svph-db-depl.yaml  svph-db-svc.yaml  svph-user-db.sql.dist
deploy/k8s-minikube/: svp-rabbit-svc.yaml  svph-api-config.yaml  svph-api-depl.yaml  svph-api-ing.yaml  svph-api-secret.yaml.dist  svph-api-svc.yaml  svph-db-depl.yaml  svph-db-pvc.yaml  svph-db-secret.yaml.dist
docs/source/: conf.py  index.rst  overview.rst
locales/: admin.pot
scripts/: add_basic_user.py  amqp_listen.py  amqp_publish.py  execute_job.py  generate_uml_diagram.py  identifiers_data.csv  remove_basic_user.py  scanr_utilities_get_unique_values.py
scripts/client_system_mock/: Dockerfile  fetch_ids.py  fetch_pubs.py  pyproject.toml  requirements.txt
tests/: conftest.py  harvesters-tests.yml  identifiers-tests.yml
tests/fixtures/: common.py  db_entity_fixtures.py  hal_api_docs_fixtures.py  harvesting_fixtures.py  idref_concept_rdf_docs_fixtures.py  idref_person_rdf_docs_fixtures.py  idref_sparql_endpoint_docs_fixtures.py  jel_sparql_endpoint_concepts_fixtures.py  open_alex_docs_fixtures.py  (+14 more)
(+460 files in other folders)
