[tool.poetry]
name = "svp-harvester"
version = "0.1.0"
description = ""
authors = ["jdp1ps <joachim.dornbusch@univ-paris1.fr>"]
license = "Cecill"
readme = "README.md"
repository = "https://github.com/jdp1ps/svp-harvester"
documentation = ""
packages = [{ include = "svp_harvester" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.103.1", extras = ["all"]}
pytest-asyncio = "^0.21.1"
amqp-mock = "^0.5.1"
aiofiles = "^23.2.1"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
dataclasses-json = "^0.6.0"
loguru = "^0.7.2"
aio-pika = "^9.3.0"
aiosparql = "^0.12.0"
rdflib = "^7.0.0"
uritools = "^4.0.2"

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
black = "^23.7.0"
uvicorn = { extras = ["standard"], version = "^0.23.1" }
pytest = "^7.4.0"
coverage = "^7.2.7"
jinja2 = {extras = ["i18n"], version = "^3.1.2"}


[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"