[tool.poetry]
name = "svp-harvester"
version = "0.1.0"
description = ""
authors = ["jdp1ps <joachim.dornbusch@univ-paris1.fr>"]
license = "Cecill"
readme = "README.md"
repository = "https://github.com/CRISalid-esr/svp-harvester"
documentation = "https://svp-harvester.readthedocs.io/en/latest/harvesters/hal.html"
packages = [{ include = "svp_harvester" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.103.1", extras = ["all"]}
pytest-asyncio = "^0.21.1"
amqp-mock = "^0.5.1"
aiofiles = "^23.2.1"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
dataclasses-json = "^0.6.0"
loguru = "^0.7.2"
aio-pika = "^9.3.0"
aiosparql = "^0.12.0"
rdflib = "^7.0.0"
uritools = "^4.0.2"
elasticsearch = {version = "7.12.1", extras = ["async"]}
strsim = "^0.0.3"
aioredis = "^2.0.1"
isbnlib = "^3.10.14"
apscheduler = "^3.10.4"

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
black = "^23.7.0"
uvicorn = { extras = ["standard"], version = "^0.23.1" }
pytest = "^7.4.0"
coverage = "^7.2.7"
jinja2 = {extras = ["i18n"], version = "^3.1.2"}
sphinx = "^7.2.6"
sphinxcontrib-confluencebuilder = "^2.3.0"
sphinx-rtd-theme = "^1.3.0"
pytest-cov = "^4.1.0"
sqlalchemy-schemadisplay = "^1.3"
pydot = "^2.0.0"
graphviz = "^0.20.1"
pydot-ng = "^2.0.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
markers = "integration: mark a test as an integration test (deselect with '-m \"not integration\"')"