[tool.poetry]
name = "svp-harvester"
version = "0.1.0"
description = ""
authors = ["jdp1ps <joachim.dornbusch@univ-paris1.fr>"]
license = "Cecill"
readme = "README.md"
repository = "https://github.com/CRISalid-esr/svp-harvester"
documentation = "https://svp-harvester.readthedocs.io/en/latest/harvesters/hal.html"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.1"
pytest-asyncio = "^0.21.1"
amqp-mock = "^0.5.1"
aiofiles = "^23.2.1"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
dataclasses-json = "^0.6.0"
loguru = "^0.7.2"
aio-pika = "9.5.5"
rdflib = "^7.0.0"
uritools = "^4.0.2"
elasticsearch = {version = "7.17.13", extras = ["async"]}
strsim = "^0.0.3"
isbnlib = "^3.10.14"
semver = "^3.0.2"
apscheduler = "^3.10.4"
lxml = "^5.3.0"
aiohttp = "^3.12.13"
aiosparql = {git = "https://github.com/CRISalid-esr/aiosparql.git", rev = "48829527026fda605c4416ea08773af44202aa9f"}
uvloop = "^0.21.0"
redis = "^6.2.0"
orjson = "^3.10.18"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"
bcrypt = "<4.1"
passlib = "^1.7.4"
uvicorn = { extras = ["standard"], version = ">=0.23,<0.41" }
jinja2 = {version = "^3.1.6", extras = ["i18n"]}

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
coverage = "^7.2.7"
sphinx = ">=8,<9"
sphinxcontrib-confluencebuilder = "^2.8.0"
sphinx-rtd-theme = "^3.0.0"
pytest-cov = "^4.1.0"
sqlalchemy-schemadisplay = "^2.0"
pydot = "^2.0.0"
graphviz = "^0.20.1"
pydot-ng = "^2.0.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
markers = "integration: mark a test as an integration test (deselect with '-m \"not integration\"')"