[tool.poetry]
name = "svp-client-mock"
version = "0.1.0"
description = ""
authors = ["jdp1ps <joachim.dornbusch@univ-paris1.fr>"]
license = "Cecill"
repository = "https://github.com/CRISalid-esr/svp-harvester"
documentation = ""
packages = [{ include = "svp_harvester" }]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
markers = "integration: mark a test as an integration test (deselect with '-m \"not integration\"')"